[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Anton-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/shield_button.png" type="Texture" id=3]
[ext_resource path="res://Assets/drone_button.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.356863, 0.486275, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "Active"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 3, 3, 3, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Active"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 3, 3, 3, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.639216, 0.980392, 1, 0.341176 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=14]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.788235, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="HUD" type="CanvasLayer"]
layer = 0
script = ExtResource( 1 )

[node name="HpBar" type="ProgressBar" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 992.0
margin_top = 584.0
margin_right = -8.0
margin_bottom = -8.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.760784 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 992.0
margin_top = 560.0
margin_right = 1032.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 3 )
text = "SHIELD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldAbility" type="TextureRect" parent="."]
self_modulate = Color( 1.25098, 1.25098, 1.25098, 1 )
margin_left = 8.0
margin_top = 552.0
margin_right = 88.0
margin_bottom = 632.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ShieldAbility"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_bottom = -48.0
custom_fonts/font = SubResource( 4 )
text = "Q"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ShieldAbility"]
anims/Active = SubResource( 5 )

[node name="DroneAbility" type="TextureRect" parent="."]
self_modulate = Color( 1.04391, 1.04391, 1.04391, 1 )
margin_left = 72.0
margin_top = 552.0
margin_right = 152.0
margin_bottom = 632.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DroneAbility"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_bottom = -48.0
custom_fonts/font = SubResource( 4 )
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="DroneAbility"]
anims/Active = SubResource( 6 )

[node name="ProgressBar" type="ProgressBar" parent="DroneAbility"]
self_modulate = Color( 1.4, 1.4, 1.4, 1 )
margin_right = 80.0
margin_bottom = 80.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speedometer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="Speedometer"]
margin_left = 992.0
margin_top = 520.0
margin_right = 1048.0
margin_bottom = 545.0
custom_fonts/font = SubResource( 9 )
text = "SPEED"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Speedometer"]
margin_left = 992.0
margin_top = 544.0
margin_right = 1208.0
margin_bottom = 552.0
rect_min_size = Vector2( 0, 8 )
custom_styles/fg = SubResource( 14 )
custom_styles/bg = SubResource( 11 )
step = 0.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Speedometer"]

[node name="RegenStatus" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="RegenStatus"]
margin_left = 1072.0
margin_top = 432.0
margin_right = 1180.0
margin_bottom = 532.0
max_value = 5.0
step = 0.01
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="RegenStatus"]
margin_left = 992.0
margin_top = 584.0
margin_right = 1208.0
margin_bottom = 592.0
rect_min_size = Vector2( 0, 8 )
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Speedometer/ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="tween_step" from="Speedometer/Tween" to="." method="_on_Tween_tween_step"]
